# LandPlan

./: .gitignore  CLAUDE.md  COMPLETION_STATUS.md  DEPLOYMENT_SUMMARY.md  DEVELOPMENT_PLAN.md  IMPLEMENTATION_PROGRESS.md  LICENSE  PHASE_6_CHECKLIST.md  PHASE_6_IMPLEMENTATION.md  PHASE_6_QUICKSTART.md  README.md  README_PHASE_6.txt  SETUP.md  STATIC_CODE_VERIFICATION.md  VERIFICATION_REPORT.md  docker-compose.yml  seed_data.sql
backend/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  pytest.ini  verify_imports.py
backend/app/: __init__.py  config.py  main.py
backend/app/bounded_contexts/: __init__.py
backend/app/bounded_contexts/admin/: routes.py
backend/app/bounded_contexts/applications/: __init__.py  routes.py  service.py
backend/app/bounded_contexts/companies/: __init__.py  routes.py  service.py
backend/app/bounded_contexts/identity_access/: __init__.py  routes.py  service.py
backend/app/core/: __init__.py  exceptions.py  logging.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  application.py  company.py  land.py  land_plan.py  notification.py  portfolio.py  recommendation.py  reference.py  review.py  service.py  user.py
backend/app/schemas/: application.py  company.py  importer.py  land.py  recommendation.py  review.py  service.py  user.py
backend/tests/: conftest.py
backend/tests/integration/: test_applications_endpoints.py  test_auth_endpoints.py  test_import_endpoints.py  test_reviews_endpoints.py
backend/tests/unit/: test_auth.py  test_recommendations_engine.py
(+84 files in other folders)
