[tool.poetry]
name = "landplan-backend"
version = "0.1.0"
description = "Platform for land parcel selection and development orchestration"
authors = ["LandPlan Team"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = {version = "^0.24.0", extras = ["standard"]}
sqlalchemy = "^2.0.0"
alembic = "^1.12.0"
psycopg2-binary = "^2.9.0"
pydantic = "^2.4.0"
pydantic-settings = "^2.0.0"
python-dotenv = "^1.0.0"
python-jose = {version = "^3.3.0", extras = ["cryptography"]}
passlib = {version = "^1.7.0", extras = ["argon2"]}
python-multipart = "^0.0.6"
redis = "^5.0.0"
celery = "^5.3.0"
geoalchemy2 = "^0.14.0"
shapely = "^2.0.0"
requests = "^2.31.0"
httpx = "^0.25.0"
email-validator = "^2.0.0"
argon2-cffi = "^23.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
black = "^23.10.0"
pylint = "^3.0.0"
mypy = "^1.6.0"
isort = "^5.12.0"
pytest-postgresql = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
